--- a/styles.css
+++ b/styles.css
@@ -430,6 +430,9 @@ body.calculator-page {
 .info-page {
     padding: 20px;
     background-color: #a2d5a2; /* Lighter green background */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centers the tiles horizontally */
 }
 
 .tile {
@@ -439,6 +442,8 @@ body.calculator-page {
     padding: 20px;
     margin: 60px; /* Increase margin to add more space between tiles */
     text-align: center;
+    width: 60%;
+
 }
 
 .centered-icon {
@@ -462,11 +467,13 @@ body.calculator-page {
 .tile h2 {
     margin-top: 70px; /* Adjust to provide space for the icon */
     color: #fff;
+    font-size: 1.1em;
 }
 
 .tile p {
     color: #fff;
     text-align: justify;
+    font-size: 1.1em;
 }
 
 .expand-button {
