--- a/styles.css
+++ b/styles.css
@@ -242,8 +242,59 @@ main {
 }
 /* Styles for impact-calculator */
 
+/* Add the following CSS to style the title container like the input fields */
+
+.title-container {
+    background-color: #006400;
+    color: white;
+    padding: 15px;
+    margin: 20px 0;
+    border-radius: 5px;
+    display: inline-block; 
+    text-align: center;
+}
+
+.title-container h1 {
+    margin: 0;
+    font-size: 24px;
+}
+
+
+
+
+
+.title-container h1 {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 16px;
+}
+
+
+
+
+#video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Ensure the video stays behind other content */
+    object-fit: cover; /* Ensure the video covers the entire background */
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden; /* Prevent scrolling */
+}
+
+.calculator-page {
+    position: relative;
+    z-index: 1; /* Ensure the calculator content appears above the video */
+}
 body.calculator-page {
-    background-color: #71bf71;
+    background-color: transparent;
     font-family: Georgia, serif;
     color: white;
     text-align: center;
