--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@ body {
     margin: 0;
     background-color: #71bf71;
 }
-
+.scrollable-container {
+    overflow-y: auto;
+    height: 100%;
+}
 .header {
     background-color: black;
     color: white;
