--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 .scrollable-container {
     overflow-y: auto;
-    height: 100%;
+    height: calc(100% - 80px);
 }
 .header {
     background-color: black;
