--- a/styles.css
+++ b/styles.css
@@ -330,6 +330,11 @@ body.calculator-page {
     margin-bottom: 20px;
 }
 
+.input-box a {
+    color: #d0d0dd;
+    text-decoration: underline;
+}
+
 .input {
     background-color: white;
     border-radius: 5px;
@@ -386,7 +391,7 @@ body.calculator-page {
 }
 
 .efficiency-box {
-    background-color: #fec925;
+    background-color: #efc952;
     border-top-right-radius: 20px; /* Highly rounded top-right */
     border-bottom-left-radius: 20px; /* Highly rounded bottom-left */
     padding: 10px;
@@ -402,6 +407,7 @@ body.calculator-page {
 .efficiency-box p {
     position: absolute;
     bottom: 5px;
+    left: -0.5%;
     width: 100%;
     text-align: center;
 }
@@ -419,6 +425,40 @@ body.calculator-page {
     text-align: center;
 }
 
+.comparison-box {
+    background-color: #efc952;
+    border-top-right-radius: 20px; /* Highly rounded top-right */
+    border-bottom-left-radius: 20px; /* Highly rounded bottom-left */
+    padding: 10px;
+    width: 92%; /* Reduced width for side-by-side alignment */
+    display: inline-block;
+    margin: 5px;
+    position: relative;
+    height: 125px; /* Fixed height */
+    vertical-align: top;
+    margin-top: 30px; /* Spacing from the semi-circle */
+}
+
+.comparison-box p {
+    position: absolute;
+    top: 0px;
+    left: -0.5%;
+    width: 100%;
+    text-align: center;
+}
+
+.comparison-box .result-value {
+    color: white;
+    font-size: 24px; /* Increased font size */
+    font-weight: bold;
+    margin: 0%;
+    position: relative;
+    top: 20%;/* Positioning higher inside the box */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    text-align: center;
+}
 
 /* Hero Section */
 .hero-info {
